[package]
name = "unblockNCM"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["notification-all", "path-all", "shell-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
port_check = "0.1.5"
serde_json = "1.0"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
#tag = "fix-path-env-v0.1.0"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
